--- a/src/APIServer/TSN.APIServer.csproj
+++ b/src/APIServer/TSN.APIServer.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Common\TSN.Common.csproj" />
+    <ProjectReference Include="..\Domain\TSN.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
