--- a/src/APIServer/TSN.APIServer.csproj
+++ b/src/APIServer/TSN.APIServer.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.8" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Common\TSN.Common.csproj" />
     <ProjectReference Include="..\Domain\TSN.Domain.csproj" />
   </ItemGroup>
