--- a/src/ChatServer/TSN.ChatServer.csproj
+++ b/src/ChatServer/TSN.ChatServer.csproj
@@ -1,9 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\TSN.Identity\TSN.Identity.csproj" />
+	</ItemGroup>
+
+	
 </Project>
