Configuração primaria da autenticação

--- a/src/APIServer/appsettings.Development.json
+++ b/src/APIServer/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Keycloak": {
+    "realm": "tsn",
+    "auth-server-url": "https://auth.sotech.xyz/",
+    "ssl-required": "external",
+    "resource": "account",
+    "public-client": true,
+    "confidential-port": 0
   }
 }
