:recycle: Reworked authentication
 - Moved authentication to Identity EF Core to simplify user management.

--- a/src/APIServer/appsettings.Development.json
+++ b/src/APIServer/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=tsn;Password=Blu102030;User Id=postgres;Include Error Detail=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
