--- a/src/APIServer/TSN.APIServer.csproj
+++ b/src/APIServer/TSN.APIServer.csproj
@@ -1,15 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Common\TSN.Common.csproj" />
-    <ProjectReference Include="..\Domain\TSN.Domain.csproj" />
-    <ProjectReference Include="..\TSN.Identity\TSN.Identity.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.9" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.9" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.9" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9" />		
+	</ItemGroup>
+	
+	<ItemGroup>
+		<ProjectReference Include="..\Common\TSN.Common.csproj" />
+		<ProjectReference Include="..\Domain\TSN.Domain.csproj" />
+		<ProjectReference Include="..\TSN.Application\TSN.Application.csproj" />
+	</ItemGroup>
 
 </Project>
